--- a/app/globals.css
+++ b/app/globals.css
@@ -3,17 +3,13 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 255, 255, 255;
+  --background-start-rgb: 100, 100, 100;
+  --background-end-rgb: 50, 50, 50;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+  
 }
 
 body {
@@ -21,9 +17,9 @@ body {
   background: linear-gradient(
       to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
+      #7BC9FF
     )
-    rgb(var(--background-start-rgb));
+    #7BC9FF;
 }
 
 @layer utilities {
